# EasyViewer

./: .dockerignore  .gitignore  .markdownlint.json  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  README.md  Youtube Downloader.py  analysis_options.yaml  appveyor.yml  build.py  compile.py  go.mod  go.sum  main.go  pubspec.yaml  pyproject.toml  requirements.py  requirements.txt  ruff.toml  wails.json
.github/: dependabot.yml
.zed/: settings.json
Config/: Config.cfg  Config.json  RutaJson.py  Ruta_Del_Archivo_De_Configuracion.py  idiomas.xlsx
Icon/: RutaIcono.py
Log/: Log.py
Scripts/: Aumentar_Barra_De_Progresion_En_Paralelo.py  BarraDeProgresion.py  Buscar.py  CambiarColor.py  Constantes.py  CrearBotones.py  CrearEntrys.py  Downloader.py  Logging.py  Main.py  Menu_De_Opciones.py  Validaciones.py  Ventana.py
build_tools/: build.py
config/: .env  __init__.py  config.json  control_variables.ini  control_variables.json  get_configuration_files.py  get_files.py  idiomas.xlsx  languages.xlsx
constants/: __init__.py  chars.py  paths.py  versions.py
control/: __init__.py  control_variables.py  read_control_variables.py  write_control_variables.py
control_variables/: __init__.py  control_variables.py
frontend/: .prettierrc.json  eslint.config.mjs  package.json  package.json.md5  vite.config.ts
icon/: icon-macOS.icns
lib/: main.dart
linux/: CMakeLists.txt
osutils/: __init__.py  file_handler.py  get_paths.py
scripts/: EasyViewer.iss  build-macos.sh  build-windows.bat  build.bat  build.sh
settings/: __init__.py  control_variables.ini
src/: BarraDeProgresion.py  BarraDeTareas.py  Cerrar.py  CrearBotones.py  CrearEntrys.py  Downloader.py  GetConfig.py  Logging.py  Main.py  Menu_De_Opciones.py  Validaciones.py  Variables_Control.py  Ventana.py  barra_de_tareas.py  buscar.py  cerrar.py  crear_entrys.py  crear_etiquetas.py  downloader.py  get_config.py  github_credentials.py  interactuar_gui.py  main.py  validaciones.py  variables_control.py  whats_new_en.txt  whats_new_es.txt
utils/: __init__.py  constants.py  enum_helper.py  (+4 more)
(+345 files in other folders)
