[project]
name = "EasyViewer"
version = "2.2.0"
description = "App to download youtube videos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet>=0.26.0",
    "pandas>=2.2.3",
    "pygithub>=2.5.0",
    "python-dotenv>=1.0.1",
    "pytubefix>=8.12.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pillow>=11.1.0",
    "pyinstaller>=6.12.0",
    "ruff>=0.9.6",
]
