[project]
name = "EasyViewer"
version = "2.2.0"
description = "App to download youtube videos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel==0.14.0",
    "flet==0.28.3",
    "polars==1.30.0",
    "python-dotenv==1.0.1",
    "pytubefix==8.12.1",
    "requests==2.32.3",
]

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "ruff==0.9.6",
    "pillow==11.1.0",
    "pyinstaller==6.12.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = { extras = ["all"], version = "0.28.3" }

[tool.flet]
product = "EasyViewer"
company = "Raul Catalinas"
copyright = "Copyright (C) 2025 by Raul Catalinas"
compile.app = true
compile.packages = true
compile.cleanup = true
